project( pdfviewer )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})
find_package( KDE4 REQUIRED )
find_package( Qt4 REQUIRED )
find_package( Poppler REQUIRED )
include_directories( ${KDE4_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} ${POPPLER_INCLUDE_DIR})
set( pdfviewer_SRCS main.cpp mainwindow.cpp pageview.cpp document.cpp finddockwidget.cpp)
kde4_add_ui_files( pdfviewer_SRCS mainwindow.ui finddockwidget.ui) #generalsettings.ui)
qt4_add_resources( pdfviewer_SRCS res.qrc )
#kde4_add_kcfg_files( pdfviewer_SRCS kcyberoam.kcfgc )
kde4_add_executable( pdfviewer ${pdfviewer_SRCS} )
target_link_libraries( pdfviewer ${KDE4_KDEUI_LIBS} ${POPPLER_LIBRARY})
install( TARGETS pdfviewer DESTINATION ${BIN_INSTALL_DIR} )
install( FILES pdfviewerui.rc DESTINATION ${DATA_INSTALL_DIR}/pdfviewer )
#install( FILES kcyberoam.kcfg DESTINATION ${KCFG_INSTALL_DIR})
